--- a/Recap_1_3_Quiz1.ipynb
+++ b/Recap_1_3_Quiz1.ipynb
@@ -52,29 +52,8 @@
       "source": [
         "a1 = '09:11:50'\n",
         "sp_a1 = a1.split(':')\n",
-        "print(sp_a1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0u0jGdK3GYQf",
-        "outputId": "888f54c5-948e-49a3-bdef-d9bb59e65bd4"
-      },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['09', '11', '50']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_a1)\n",
+        "\n",
         "total_sec1 = int(sp_a1[0])*3600+int (sp_a1[1])*60+int (sp_a1[2])\n",
         "print(total_sec1)"
       ],
@@ -82,15 +61,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "jn3eNUEGHuke",
-        "outputId": "2248760e-84a0-4bcd-c8a8-454dce059eb7"
+        "id": "0u0jGdK3GYQf",
+        "outputId": "ad03a6f6-2de1-42f4-923b-9c7e01822145"
       },
-      "execution_count": 30,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['09', '11', '50']\n",
             "33110\n"
           ]
         }
@@ -101,29 +81,8 @@
       "source": [
         "a2 = '12:30:15'\n",
         "sp_a2 = a2.split(':')\n",
-        "print(sp_a2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cy1lgOt0JLFy",
-        "outputId": "356053df-ec58-4eea-ec10-a70dab365731"
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['12', '30', '15']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_a2)\n",
+        "\n",
         "total_sec2 = int(sp_a2[0])*3600+int (sp_a2[1])*60+int (sp_a2[2])\n",
         "print(total_sec2)"
       ],
@@ -131,15 +90,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SnenvpfQLDBv",
-        "outputId": "1da0c08b-d0a7-480c-e6c8-66083f4a00fb"
+        "id": "cy1lgOt0JLFy",
+        "outputId": "468be479-12bc-4708-ef81-c2aaa97d2422"
       },
-      "execution_count": 33,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['12', '30', '15']\n",
             "45015\n"
           ]
         }
@@ -155,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s83ZLU7mLVRJ",
-        "outputId": "ec7eb1b9-255c-432a-f8c2-3b6be797142b"
+        "outputId": "a38f0fcd-ef57-4f4d-c29d-64c197d2a146"
       },
-      "execution_count": 37,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,29 +133,8 @@
       "source": [
         "b1 = '13:41:07'\n",
         "sp_b1 = b1.split(':')\n",
-        "print(sp_b1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yCOJnDt9MggS",
-        "outputId": "d8d79751-f6fb-46ef-826d-832e9cde4597"
-      },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['13', '41', '07']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_b1)\n",
+        "\n",
         "total_sec3 = int(sp_b1[0])*3600+int (sp_b1[1])*60+int (sp_b1[2])\n",
         "print(total_sec3)"
       ],
@@ -203,15 +142,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Pjrx-04FMSVr",
-        "outputId": "e7854dab-668c-4ed7-f5a8-1d2c0c8dbb1d"
+        "id": "yCOJnDt9MggS",
+        "outputId": "d85fd573-4efa-4229-ee4e-721b7c7c51f7"
       },
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['13', '41', '07']\n",
             "49267\n"
           ]
         }
@@ -222,29 +162,8 @@
       "source": [
         "b2 = '20:00:18'\n",
         "sp_b2 = b2.split(':')\n",
-        "print(sp_b2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ovdEwcsWM1Qr",
-        "outputId": "12c469b4-e3fc-451a-f407-b2631207efb5"
-      },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['20', '00', '18']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_b2)\n",
+        "\n",
         "total_sec4 = int(sp_b2[0])*3600+int (sp_b2[1])*60+int (sp_b2[2])\n",
         "print(total_sec4)"
       ],
@@ -252,15 +171,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QIPrvewyM-m0",
-        "outputId": "9c9bb854-e3a6-41ab-aaae-0cfc0658c7d8"
+        "id": "ovdEwcsWM1Qr",
+        "outputId": "b0e8419a-1c68-404f-a6d9-4c111bd456c0"
       },
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['20', '00', '18']\n",
             "72018\n"
           ]
         }
@@ -276,9 +196,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GH8qB1fyM-Yn",
-        "outputId": "5649efe6-863d-444c-ae95-84571bb20e85"
+        "outputId": "fa3d59ca-f649-4367-e8de-d966195489f0"
       },
-      "execution_count": 42,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,29 +214,8 @@
       "source": [
         "c1 = '21:30:15'\n",
         "sp_c1 = c1.split(':')\n",
-        "print(sp_c1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WpdFLpACNMcA",
-        "outputId": "b8d80a16-cca7-44ee-b71d-11bc5abbbae0"
-      },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['21', '30', '15']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_c1)\n",
+        "\n",
         "total_sec5 = int(sp_c1[0])*3600+int (sp_c1[1])*60+int (sp_c1[2])\n",
         "print(total_sec5)"
       ],
@@ -324,15 +223,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "rK6r35J-NMWR",
-        "outputId": "cd53635e-004c-43f6-bc15-63c55986c7d3"
+        "id": "WpdFLpACNMcA",
+        "outputId": "9810b76a-d89b-42d8-fa78-29b5d54939da"
       },
-      "execution_count": 44,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['21', '30', '15']\n",
             "77415\n"
           ]
         }
@@ -343,29 +243,8 @@
       "source": [
         "c2 = '24:00:00'\n",
         "sp_c2 = c2.split(':')\n",
-        "print(sp_c2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ql406kaGNMP2",
-        "outputId": "635b3495-c4f1-4033-d583-df3c922371c0"
-      },
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['24', '00', '00']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_c2)\n",
+        "\n",
         "total_sec6 = int(sp_c2[0])*3600+int (sp_c2[1])*60+int (sp_c2[2])\n",
         "print(total_sec6)"
       ],
@@ -373,15 +252,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "b_tMR0S_NMGu",
-        "outputId": "aee569fb-da51-46bc-9606-5f89bf627333"
+        "id": "ql406kaGNMP2",
+        "outputId": "17ff3b43-f19a-4319-d01b-19cb4e68f1e3"
       },
-      "execution_count": 47,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['24', '00', '00']\n",
             "86400\n"
           ]
         }
@@ -397,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C2TJhKBqN42n",
-        "outputId": "c2ee6180-ed66-4eb1-918f-12954d917a37"
+        "outputId": "252e206c-fc85-452a-8620-36d12cffd86a"
       },
-      "execution_count": 48,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,29 +295,8 @@
       "source": [
         "d1 = '00:00:00'\n",
         "sp_d1 = d1.split(':')\n",
-        "print(sp_d1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pqzGCWVhOBQh",
-        "outputId": "98577d97-0dd9-4591-b075-0ddcfa3c6c44"
-      },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['00', '00', '00']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_d1)\n",
+        "\n",
         "total_sec7 = int(sp_d1[0])*3600+int (sp_d1[1])*60+int (sp_d1[2])\n",
         "print(total_sec7)"
       ],
@@ -445,15 +304,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8beB2JZAOBNY",
-        "outputId": "19f0ea07-10f2-4eb3-8399-0fba55ee7569"
+        "id": "pqzGCWVhOBQh",
+        "outputId": "1e96565f-79a1-4fca-8d91-f03122723005"
       },
-      "execution_count": 51,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['00', '00', '00']\n",
             "0\n"
           ]
         }
@@ -464,29 +324,8 @@
       "source": [
         "d2 = '23:59:59'\n",
         "sp_d2 = d2.split(':')\n",
-        "print(sp_d2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TGyraQAIOBIv",
-        "outputId": "60286c73-a9d4-48e2-9170-50bfdd16a2f9"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['23', '59', '59']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "print(sp_d2)\n",
+        "\n",
         "total_sec8 = int(sp_d2[0])*3600+int (sp_d2[1])*60+int (sp_d2[2])\n",
         "print(total_sec8)"
       ],
@@ -494,15 +333,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2O7Zzr-vOBAG",
-        "outputId": "96691def-d1df-4ff3-dfb3-d9c596ca2a6f"
+        "id": "TGyraQAIOBIv",
+        "outputId": "1a86a33a-31d4-4171-9479-85f267e99d81"
       },
-      "execution_count": 53,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "['23', '59', '59']\n",
             "86399\n"
           ]
         }
@@ -518,9 +358,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7-YTJ_08OnQa",
-        "outputId": "cb23d4ce-9337-4a91-8079-00b9b647c0a7"
+        "outputId": "784700a5-c9a3-431d-d5f2-705d90b60327"
       },
-      "execution_count": 54,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
