Project & Dashboard & Presentation

--- a/Project_BPDV.ipynb
+++ b/Project_BPDV.ipynb
@@ -11998,11 +11998,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🔗Link Dashboard Project\n",
+        "# 🔗Link of Dashboard Project\n",
         "https://datastudio.google.com/reporting/1ca4ccd0-489b-4232-b40f-02a813d8a443"
       ],
       "metadata": {
         "id": "WFkMJucwqf8f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 🔗Link of Presentation Project\n",
+        "\n",
+        "https://drive.google.com/file/d/1SIVZBSFtloxq-tZSYbItJ6fjZdOZGX-q/view?usp=share_link"
+      ],
+      "metadata": {
+        "id": "wjNFs-7_RlF-"
       }
     }
   ]
